[package]
name = "mori-summer-mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
dotenv_codegen = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
paho-mqtt = { version = "0.12", default-features=false, features=["bundled"] }
